--- a/editor/package.json
+++ b/editor/package.json
@@ -4,6 +4,7 @@
     "cytoscape-context-menus": "^4.2.1"
   },
   "devDependencies": {
+    "@types/cytoscape-context-menus": "^4.1.5",
     "vite": "^7.3.1",
     "vite-plugin-singlefile": "^2.3.0"
   }
