--- a/editor/package.json
+++ b/editor/package.json
@@ -1,10 +1,15 @@
 {
+  "type": "module",
   "dependencies": {
     "cytoscape": "^3.33.1",
     "cytoscape-context-menus": "^4.2.1"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "@stylistic/eslint-plugin": "^5.8.0",
     "@types/cytoscape-context-menus": "^4.1.5",
+    "eslint": "^10.0.0",
+    "globals": "^17.3.0",
     "vite": "^7.3.1",
     "vite-plugin-singlefile": "^2.3.0"
   }
