--- a/editor/package.json
+++ b/editor/package.json
@@ -6,11 +6,13 @@
   },
   "devDependencies": {
     "@eslint/css": "^0.14.1",
-    "@eslint/js": "^10.0.1",
+    "@eslint/js": "^9.39.2",
     "@stylistic/eslint-plugin": "^5.8.0",
     "@types/cytoscape-context-menus": "^4.1.5",
-    "eslint": "^10.0.0",
+    "eslint": "^9.39.2",
     "globals": "^17.3.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.55.0",
     "vite": "^7.3.1",
     "vite-plugin-singlefile": "^2.3.0"
   }
