--- a/editor/package.json
+++ b/editor/package.json
@@ -2,7 +2,8 @@
   "type": "module",
   "dependencies": {
     "cytoscape": "^3.33.1",
-    "cytoscape-context-menus": "^4.2.1"
+    "cytoscape-context-menus": "^4.2.1",
+    "cytoscape-undo-redo": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/css": "^0.14.1",
