--- a/sync-lsp/Cargo.toml
+++ b/sync-lsp/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.101"
-lsp-types = "0.97.0"
+async-lsp = "0.2.2"
+async-process = "2.5.0"
+futures = { version = "0.3.32", default-features = false, features = ["async-await", "std"] }
 serde_json = "1.0.149"
+tokio = { version = "1.49.0", features = ["macros", "rt"] }
+tower = "0.5.3"
