--- a/sync-lsp/Cargo.toml
+++ b/sync-lsp/Cargo.toml
@@ -14,3 +14,4 @@ serde_derive = "1.0.228"
 serde_json = "1.0.149"
 tokio = { version = "1.49.0", features = ["macros", "rt"] }
 tower = "0.5.3"
+unwrap_or = "1.0.1"
