--- a/sync-lsp/Cargo.toml
+++ b/sync-lsp/Cargo.toml
@@ -12,6 +12,7 @@ futures = { version = "0.3.32", default-features = false, features = ["async-awa
 serde = "1.0.228"
 serde_derive = "1.0.228"
 serde_json = "1.0.149"
+serde_urlencoded = "0.7.1"
 tokio = { version = "1.49.0", features = ["macros", "rt"] }
 tower = "0.5.3"
 unwrap_or = "1.0.1"
