--- a/editor/package.json
+++ b/editor/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "cytoscape": "^3.33.1",
     "cytoscape-context-menus": "^4.2.1",
-    "cytoscape-undo-redo": "^1.3.3"
+    "cytoscape-undo-redo": "^1.3.3",
+    "marked": "^17.0.3"
   },
   "devDependencies": {
     "@eslint/css": "^0.14.1",
