--- a/sync-lsp/Cargo.toml
+++ b/sync-lsp/Cargo.toml
@@ -4,17 +4,19 @@ version = "0.1.1"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.101"
+anyhow = "1.0"
 async-lsp = "0.2.2"
-async-process = "2.5.0"
-clap = { version = "4.5.59", features = ["derive"] }
-futures = { version = "0.3.32", default-features = false, features = ["async-await", "std"] }
-indexmap = { version = "2.13.0", features = ["serde"] }
-serde = "1.0.228"
-serde_derive = "1.0.228"
-serde_json = { version = "1.0.149", features = ["preserve_order"] }
-serde_urlencoded = "0.7.1"
-tokio = { version = "1.49.0", features = ["macros", "rt"] }
-tower = "0.5.3"
-unwrap_or = "1.0.1"
-urlencoding = "2.1.3"
+async-process = "2.5"
+clap = { version = "4.5", features = ["derive"] }
+fern = "0.7"
+futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
+indexmap = { version = "2.13", features = ["serde"] }
+log = "0.4"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = { version = "1.0", features = ["preserve_order"] }
+serde_urlencoded = "0.7"
+tokio = { version = "1.49", features = ["macros", "rt"] }
+tower = "0.5"
+unwrap_or = "1.0"
+urlencoding = "2.1"
